--- a/TASK/index.html
+++ b/TASK/index.html
@@ -6,6 +6,10 @@
     <title>Task for Console and document</title>
 </head>
 <body>
-    <script src="Task1.js"></script>
+    <!-- <script src="Task1.js"></script> -->
+    <!-- <script src="Task2.js"></script> -->
+    <!-- <script src="Task3.js"></script> -->
+    <!-- <script src="task4.js"></script> -->
+    <script src="Task5.js"></script>
 </body>
 </html>
