--- a/TASK/index.html
+++ b/TASK/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="Task3.js"></script> -->
     <!-- <script src="task4.js"></script> -->
     <!-- <script src="Task5.js"></script> -->
-    <script src="Task6.js"></script>
+    <!-- <script src="Task6.js"></script> -->
+    <script src="Task7.js"></script>
 </body>
 </html>
