--- a/TASK/index.html
+++ b/TASK/index.html
@@ -12,6 +12,7 @@
     <!-- <script src="task4.js"></script> -->
     <!-- <script src="Task5.js"></script> -->
     <!-- <script src="Task6.js"></script> -->
-    <script src="Task7.js"></script>
+    <!-- <script src="Task7.js"></script> -->
+    <script src="Task8.js"></script>
 </body>
 </html>
