--- a/TASK/index.html
+++ b/TASK/index.html
@@ -13,6 +13,7 @@
     <!-- <script src="Task5.js"></script> -->
     <!-- <script src="Task6.js"></script> -->
     <!-- <script src="Task7.js"></script> -->
-    <script src="Task8.js"></script>
+    <!-- <script src="Task8.js"></script> -->
+    <script src="Hanoi.js"></script>
 </body>
 </html>
